AWS-EKS/EKS-Workloads-on-Fargate/Fargate-Profiles-Advanced-YAML/kube-manifests/02-Applications/03-ns-ums/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-ums
# Apps deployed in this namespace will run on a Fargate fp-ums
