AWS-EKS/EKS-Workloads-on-Fargate/Fargate-Profiles-Advanced-YAML/kube-manifests/02-Applications/03-ns-ums/03-UserManagementMicroservice-Deployment-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgmt-microservice
  labels:
    app: usermgmt-restapp
    runon: fargate
  namespace: ns-ums
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usermgmt-restapp
  template:
    metadata:
      labels:
        app: usermgmt-restapp
        runon: fargate
    spec:
      containers:
      - name: usermgmt-restapp
        image: stacksimplify/kube-usermanagement-microservice:1.0.0
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8095
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - nc -z localhost 8095
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /usermgmt/health-status
            port: 8095
          initialDelaySeconds: 60
          periodSeconds: 10
