AWS-EKS/EKS-Workloads-on-Fargate/Fargate-Profiles-Advanced-YAML/kube-manifests/02-Applications/03-ns-ums/02-MySQL-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    runon: fargate
  namespace: ns-ums
spec:
  type: ExternalName
  externalName: umgmt.czasg4cict9w.us-east-1.rds.amazonaws.com
